--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ span[frown] { transform: rotate(90deg); display:inline-block; color: #bbb; }
 
 <details>
   <summary><h1>404 say what?</h1><br/>
-      <a href="http://pungle.org">GO HOME</a>
+      <a href="http://pungle.me">GO HOME</a>
   </summary>
   <p><span frown>:(</span></p>
 </details>
